--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <version>1.7.20</version>
         </dependency>
 		
+		<!-- <dependency>
+        		<groupId>org.mockito</groupId>
+        		<artifactId>mockito-core</artifactId>
+        		<version>2.15.0</version>
+    		</dependency> -->
+		
+		
 	</dependencies>
 
 	<build>
